added smarty/smarty to composer depencis

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         {"name": "Johannes Papst", "email": "info@iit-online.de"}
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "smarty/smarty": "3.1.39"
     },
     "config": {
         "sort-packages": true
