--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": ">=7.0",
         "smarty/smarty": "3.1.39",
-        "components/jquery": "3.1.5",
-        "components/jqueryui": "1.12.1",
-        "tabalinas/jsgrid": "1.5.3"
+        "components/jquery": "3.1.*",
+        "components/jqueryui": "1.12.*",
+        "tabalinas/jsgrid": "1.5.*"
     },
     "config": {
         "sort-packages": true
