--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "smarty/smarty": "3.1.39",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
-        "tabalinas/jsgrid": "1.5.*"
+        "tabalinas/jsgrid": "1.5.3"
     },
     "config": {
         "sort-packages": true
