--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,9 @@
     ],
     "require": {
         "php": ">=7.0",
-        "smarty/smarty": "3.1.39",
+        "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
-        "components/jqueryui": "1.12.*",
-        "tabalinas/jsgrid": "1.5.3"
+        "components/jqueryui": "1.12.*"
     },
     "config": {
         "sort-packages": true
