--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,14 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com/bheyser/jsgrid.git"
+            "url": "https://github.com/tabalinas/jsgrid.git"
         }
     ],
     "require": {
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
-        "components/jqueryui": "1.12.*",
-        "bheyser/jsgrid": "dev-master"
+        "components/jqueryui": "1.12.*"
     },
     "config": {
         "sort-packages": true
