--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
-        "components/jqueryui": "1.12.*"
+        "components/jqueryui": "1.12.*",
+        "guzzlehttp/psr7": "1.8.*"
     },
     "config": {
         "sort-packages": true
