--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
-        "guzzlehttp/psr7": "1.8.*"
+        "guzzlehttp/psr7": "1.8.*",
+        "pimple/pimple" : "3.4.*"
     },
     "config": {
         "sort-packages": true
