--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
         "guzzlehttp/psr7": "1.8.*",
-        "pimple/pimple" : "3.4.*"
+        "pimple/pimple" : "3.4.*",
+        "ramsey/uuid": "3.9.*"
     },
     "config": {
         "sort-packages": true
