--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
+        "twbs/bootstrap": "4.0.*",
         "guzzlehttp/psr7": "1.8.*",
         "pimple/pimple" : "3.4.*",
         "ramsey/uuid": "3.9.*"
