--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
     "repositories": [
         {
             "type": "git",
+            "url": "https://github.com/jopawu/bootstrap-php.git"
+        },
+        {
+            "type": "git",
             "url": "https://github.com/tabalinas/jsgrid.git"
         }
     ],
@@ -20,7 +24,7 @@
         "smarty/smarty": "3.1.*",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
-        "twbs/bootstrap": "5.0.*",
+        "jopawu/bootstrap-php": "dev-main",
         "guzzlehttp/psr7": "1.8.*",
         "pimple/pimple" : "3.4.*",
         "ramsey/uuid": "3.9.*"
