--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,10 @@
         {"name": "Björn Heyser", "email": "info@bjoernheyser.de"},
         {"name": "Johannes Papst", "email": "info@iit-online.de"}
     ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/jopawu/bootstrap-php.git"
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/tabalinas/jsgrid.git"
-        }
-    ],
     "require": {
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
+        "twbs/bootstrap": "5.0.*",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
         "guzzlehttp/psr7": "1.8.*",
