--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
         "twbs/bootstrap": "5.0.*",
+        "rsportella/popper": "*",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
         "guzzlehttp/psr7": "1.8.*",
