--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,11 @@
         {"name": "Björn Heyser", "email": "info@bjoernheyser.de"},
         {"name": "Johannes Papst", "email": "info@iit-online.de"}
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
         "twbs/bootstrap": "5.0.*",
-        "rsportella/popper": "*",
+        "rsportella/popper": "dev",
         "components/jquery": "3.1.*",
         "components/jqueryui": "1.12.*",
         "guzzlehttp/psr7": "1.8.*",
