added composer dependency

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "components/jqueryui": "1.12.*",
         "guzzlehttp/psr7": "1.8.*",
         "pimple/pimple" : "3.4.*",
-        "ramsey/uuid": "3.9.*"
+        "ramsey/uuid": "3.9.*",
+        "harvesthq/chosen": "*"
     },
     "config": {
         "sort-packages": true
