--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,20 @@
         {"name": "Björn Heyser", "email": "info@bjoernheyser.de"},
         {"name": "Johannes Papst", "email": "info@iit-online.de"}
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/jopawu/nextcloud-dav.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/RubyMoney/money.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/bheyser/jsgrid.git"
+        }
+    ],
     "require": {
         "php": ">=7.0",
         "smarty/smarty": "3.1.*",
