--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         },
         {
             "type": "git",
-            "url": "https://github.com/RubyMoney/money.git"
+            "url": "https://github.com/bheyser/money-currencies-database.git"
         },
         {
             "type": "git",
